--- a/src/static/contact.css
+++ b/src/static/contact.css
@@ -1,6 +1,7 @@
 .socialMediaHeader,.socialMediaLinks{
     background: #eeeeee26;
     margin: auto;
+    border: 1px solid rgba(143, 142, 142, 0.95);
 }
 .socialArrowBeteen{
     margin: auto;
