--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html{
-  background:rgba(109, 95, 240, 0.85);
+  /* background:rgba(109, 95, 240, 0.85); */
+  background:linear-gradient(90deg ,rgb(35, 38, 44),rgba(35, 38, 75,1));
   overflow-y: scroll;
 }
 
