--- a/src/static/contact.css
+++ b/src/static/contact.css
@@ -1,5 +1,5 @@
 .socialMediaHeader,.socialMediaLinks{
-    background: linear-gradient(90deg, rgb(69, 66, 66), rgba(89, 89, 89,1));
+    background: linear-gradient(90deg, rgb(126, 120, 120), rgb(131, 122, 122));
     margin: auto;
     border: 1px solid rgba(143, 142, 142, 0.95);
 }
@@ -16,7 +16,7 @@
 }
 
 .PageWelcomeHeader{
-    letter-spacing: 0.05em;   
+    letter-spacing: 0.0075em;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 2;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
