--- a/src/static/contact.css
+++ b/src/static/contact.css
@@ -1,7 +1,8 @@
 .socialMediaHeader,.socialMediaLinks{
-    background: linear-gradient(90deg, rgb(126, 120, 120), rgb(131, 122, 122));
+    background: linear-gradient(90deg, rgb(218, 214, 214), rgb(255, 255, 255));
     margin: auto;
     border: 1px solid rgba(143, 142, 142, 0.95);
+    color:black;
 }
 .socialArrowBeteen{
     margin: auto;
@@ -13,6 +14,7 @@
     line-height: 2;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     font-weight: 700;
+    color:black;
 }
 
 .PageWelcomeHeader{
